--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "tsc && npm start",          
-    "dev:watch": "tsc-watch --onSuccess \"npm start\""  
+    "dev": "tsc && npm start",
+    "dev:watch": "tsc-watch --onSuccess \"npm start\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,12 +22,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/validator": "^13.15.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
     "nodemon": "^3.1.10",
-    "tsc-watch": "^7.1.1"
+    "tsc-watch": "^7.1.1",
+    "typescript-eslint": "^8.34.0"
   }
 }
