--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:watch": "tsc-watch --onSuccess \"npm start\""
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
