--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^7.1.1",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0"
   }
 }
