--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.12.4",
     "jsonwebtoken": "^9.0.2",
@@ -25,8 +26,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
-    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
