--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.12.4",
@@ -27,7 +28,9 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
@@ -38,11 +41,13 @@
     "@types/validator": "^13.15.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "axios-cookiejar-support": "^6.0.2",
     "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "jest": "^30.0.2",
     "nodemon": "^3.1.10",
+    "tough-cookie": "^5.1.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsc-watch": "^7.1.1",
