--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.14.2",
     "node-localstorage": "^3.0.5",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "zod": "^3.25.67"
   },
   "author": "",
   "license": "ISC",
