--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.14.2",
     "node-localstorage": "^3.0.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.0",
+    "yamljs": "^0.3.0",
     "zod": "^3.25.67"
   },
   "author": "",
@@ -39,7 +42,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/node-localstorage": "^1.3.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.1",
+    "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "axios-cookiejar-support": "^6.0.2",
