--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/node-localstorage": "^1.3.3",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.1",
     "@types/yamljs": "^0.2.34",
