--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "dev": "tsc && npm start",
-    "dev:watch": "tsc-watch --onSuccess \"npm start\""
+    "start:dev": "npm run build && cross-env NODE_ENV=development npm start",
+    "dev:watch": "tsc-watch --onSuccess \"npm start\"",
+    "start:prod": "npm run build && cross-env NODE_ENV=production npm start"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.4",
@@ -52,6 +54,7 @@
     "@typescript-eslint/parser": "^8.34.0",
     "axios-cookiejar-support": "^6.0.2",
     "axios-mock-adapter": "^2.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "jest": "^30.0.2",
