--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/app.js",
     "start:dev": "npm run build && cross-env NODE_ENV=development npm start",
     "start:prod": "npm run build && cross-env NODE_ENV=production npm start",
-    "start:watch": "tsc-watch --onSuccess \"npm start\""
+    "start:watch": "tsc-watch --onSuccess \"npm start\"",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.4",
@@ -49,6 +50,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/node-localstorage": "^1.3.3",
+    "@types/prettier": "^2.7.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.1",
@@ -63,6 +65,7 @@
     "globals": "^16.2.0",
     "jest": "^30.0.2",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "tough-cookie": "^5.1.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
