--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/mongodb": "^4.0.6",
     "@types/node-localstorage": "^1.3.3",
     "@types/prettier": "^2.7.3",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.1",
@@ -63,9 +64,11 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
-    "jest": "^30.0.2",
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
+    "supertest": "^7.1.4",
     "tough-cookie": "^5.1.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
