--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.4",
+    "@faker-js/faker": "^9.9.0",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
