--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.12.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
+    "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.14.2",
     "node-localstorage": "^3.0.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tslib": "^2.8.1",
     "validator": "^13.15.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
