Add eslint configration

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:dev": "npm run build && cross-env NODE_ENV=development npm start",
     "start:prod": "npm run build && cross-env NODE_ENV=production npm start",
     "start:watch": "tsc-watch --onSuccess \"npm start\"",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.4",
