--- a/package.json
+++ b/package.json
@@ -62,14 +62,16 @@
     "@types/validator": "^13.15.1",
     "@types/winston": "^2.4.4",
     "@types/yamljs": "^0.2.34",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "axios-cookiejar-support": "^6.0.2",
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.33.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.2.0",
     "jest": "^30.0.5",
+    "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
