--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.2.0",
     "jest": "^30.0.5",
     "jiti": "^2.5.1",
