--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+      - name: Check Prettier formatting
+        run: npx prettier --check .
