--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   mongo:
     image: mongo:7
     container_name: pet-shop-mongo
-    command: ["mongod", "--quiet"]
+    command: ['mongod', '--quiet']
     restart: always
     ports:
       - '27017:27017' # expose mongo's default port 27017 from container -> host
